{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 51,
  "lineage": "4fbf83e5-92a4-47c2-8faa-fabd6490c2ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c506ecbc913854cf",
            "arn": "arn:aws:ec2:sa-east-1:687146059744:elastic-ip/eipalloc-0c506ecbc913854cf",
            "domain": "vpc",
            "id": "eipalloc-0c506ecbc913854cf",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-52-67-194-98.sa-east-1.compute.amazonaws.com",
            "public_ip": "52.67.194.98",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "payment_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:687146059744:security-group/sg-0cc9d845ae1a73b64",
            "description": "Application Security Group",
            "egress": [],
            "id": "sg-0cc9d845ae1a73b64",
            "ingress": [],
            "name": "payment_app",
            "name_prefix": "",
            "owner_id": "687146059744",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Payment App"
            },
            "tags_all": {
              "Name": "Payment App"
            },
            "timeouts": null,
            "vpc_id": "vpc-047ea003c9dff8a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:687146059744:security-group-rule/sgr-04c1b949d85ae3d63",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all",
            "from_port": 8089,
            "id": "sgr-04c1b949d85ae3d63",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cc9d845ae1a73b64",
            "security_group_rule_id": "sgr-04c1b949d85ae3d63",
            "tags": {
              "Name": "Egress"
            },
            "tags_all": {
              "Name": "Egress"
            },
            "to_port": 8089
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.example",
            "aws_security_group.payment_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_apis_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:687146059744:security-group-rule/sgr-0e3e7d8f453505912",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": "Allows APIs access from DEV VPC",
            "from_port": 8080,
            "id": "sgr-0e3e7d8f453505912",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cc9d845ae1a73b64",
            "security_group_rule_id": "sgr-0e3e7d8f453505912",
            "tags": {
              "Name": "Dev API"
            },
            "tags_all": {
              "Name": "Dev API"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.example",
            "aws_security_group.payment_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_apis_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:687146059744:security-group-rule/sgr-037df091eef24c19f",
            "cidr_ipv4": "52.67.194.98/32",
            "cidr_ipv6": null,
            "description": "Allows APIs access from Prod App Public IP",
            "from_port": 8443,
            "id": "sgr-037df091eef24c19f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cc9d845ae1a73b64",
            "security_group_rule_id": "sgr-037df091eef24c19f",
            "tags": {
              "Name": "Prod API"
            },
            "tags_all": {
              "Name": "Prod API"
            },
            "to_port": 8443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.example",
            "aws_security_group.payment_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:687146059744:security-group-rule/sgr-06ce8791ba42246ed",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": "Allows HTTPS from DEV VPC",
            "from_port": 443,
            "id": "sgr-06ce8791ba42246ed",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cc9d845ae1a73b64",
            "security_group_rule_id": "sgr-06ce8791ba42246ed",
            "tags": {
              "Name": "HTTPS"
            },
            "tags_all": {
              "Name": "HTTPS"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.example",
            "aws_security_group.payment_app"
          ]
        }
      ]
    }
  ]
}